--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-	"ip":"smponlyfriends.aternos.me",
-	"port": 50604,
-	"name": "MR_MR11",
+	"ip":"TheToastStealer.aternos.me",
+	"port": 39437,
+	"name": "thebestcrafter",
 	"auto-night-skip":"false",
 	"login-enabled":"true",
 	"register-cmd":"/register MR_MR121 MR_MR121",
