--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-	"ip":"smponlyfriends.aternos.me",
-	"port": 50604,
-	"name": "MR_MR11",
+	"ip":"TheToastStealer.aternos.me",
+	"port": 39437,
+	"name": "TheRealOne",
 	"auto-night-skip":"false",
 	"login-enabled":"true",
-	"register-cmd":"/register MR_MR121 MR_MR121",
-	"login-cmd":"/login MR_MR121"
+	"register-cmd":"/register TheRealOne TheRealOne",
+	"login-cmd":"/login TheRealOne"
 }
