--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"smponlyfriends.aternos.me",
-	"port": 50604,
+	"ip":"TheToastStealer.aternos.me",
+	"port": 39437,
 	"name": "MR_MR11",
 	"auto-night-skip":"false",
 	"login-enabled":"true",
